# agent-assembler

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  TASKS.md  api_gateway.py  cross_profile_collector.py  cross_profile_dashboard.html  dashboard_data.js  pyproject.toml  requirements.txt  routing_schema.json  test_autocraft_pipeline.py
.github/workflows/: publish.yml
00-Instructions/: task-for-gino-cloudbase-http.md
agent_assembler/: __init__.py  assembler.py  recipe.py
api_gateway/: AUTOCRAFT_V3_UPGRADE.md  __init__.py  autocraft.py  autocraft.py.p0p2b-backup  autocraft_v4.py  config.py  core.py  db.py  discipline.py  multimodal.py  p5_routes.py  recipe_schema.json  recipe_validator.py  routes_apikeys.py  routes_deploy.py  routes_metrics.py  routes_recipes.py  script_engine.py  template_engine.py  trinity_routes.py  workflow_engine.py
api_gateway/templates/: mcp_config.j2  recipe_json.j2  recipe_script.j2  skill_md.j2
autocraft/references/: recipe_schema.json  recipe_template.py
docs/: SPEC.md  cross-profile-dashboard-plan.md  多平台AI资源注册指南.md
examples/: web_dashboard.py  web_dashboard_v1.py
examples/core/: storage.py
infra/: Dockerfile  deploy.sh  docker-compose.yml
recipes/: README.md  contract_review.json  data_analysis.json  sales_simulation.json
src/agent_assembler/: __init__.py  agent.py  assembler.py  llm.py  recipe.py  registry.py
src/agent_assembler/adapters/: __init__.py  base.py  coze.py  qianwen.py
tests/: test_adapters.py  test_agent.py  test_assembler.py  test_autocraft_fix.py  test_autocraft_v3_e2e.py  test_llm.py  test_registry.py  test_sidecar.py
tests/test_api_gateway/: test_autocraft.py  test_chat.py  test_health.py  test_p5_routes.py
(+8 files in other folders)
