
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-assembler"
version = "0.1.0"
description = "Deterministic Context Assembly for AI Agents - JIT Skill Loading"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hermes Agent", email = "gino@hermes.ai"}
]
keywords = ["LLM", "AI", "Agent", "Context", "JIT", "Prompt Engineering", "LangChain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/gino/agent-assembler"
