
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-assembler"
version = "1.1.0"
description = "Deterministic Context Assembly for AI Agents."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
